# NQKafka

./: LICENSE  README.md  consumer.py  mymanager.py  producer.py  pyproject.toml  server.py  utils.py
examples/: create_topics.py  seek_offset.py  start_consumer.py  start_producer.py  start_server.py  stop_server.py
examples/ensure_msg_received/: create_topics.py  start_consumer.py  start_producer.py
examples/multiple_topics_test/: consume_single_msg.py  create_topics.py  produce_single_msg.py  start_consumer.py  start_consumer_2.py
examples/producer_consumer_test/: get_last_msg.py  produce_single_msg.py  start_consumer.py  start_consumer_2.py  start_producer.py  start_producer_2.py
src/nqkafka/: __init__.py  consumer.py  mymanager.py  producer.py  server.py  utils.py
tests/: test.py  test_consume_offset_deleted.py  test_consumer_non_existing_topic.py  test_consumer_running_server_stops.py  test_init.py  test_multiple_consumers_and_topics.py  test_multiple_servers.py  test_producer_running_server_stops.py  test_seek_offset_deleted.py  test_server_stops_consumer_running.py  test_server_stops_prod_and_cons_running copy.py  test_single_thread.py  test_start_manager_slow.py  test_start_server_slow.py
