[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nqkafka"
description = ''
readme = "README.md"
requires-python = ">=3"
license = {file="LICENSE"}
version = "0.0.2"
keywords = []
authors = [
  { name = "Hallvar Haugdal", email = "hallvar.haugdal@sintef.no" },
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]
dependencies = [
	]

[project.urls]
"Homepage" = "https://github.com/hallvar-h/NQKafka"
"Bug Tracker" = "https://github.com/hallvar-h/NQKafka/issues"
